# duplicate_test

./: README.md  pyproject.toml
shopcore/: __init__.py  api.py  audit.py  auth.py  batch.py  cache.py  cart.py  discounts.py  inventory.py  invoice.py  main.py  models.py  notification.py  operations.py  payment.py  pricing.py  reports.py  returns.py  semantic_cases.py  shipping.py  utils.py  validators.py  workflow_probe.py
shopcore/legacy/: workflow_signal.py
tests/: test_batch.py  test_checkout.py  test_operations.py  test_returns.py  test_validators.py
