[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "shopcore"
version = "0.1.0"
description = "Lightweight backend commerce workflow used for git history experiments"
requires-python = ">=3.11"

[tool.setuptools]
packages = ["shopcore"]

[tool.pytest.ini_options]
pythonpath = ["."]
